2006-02-19  Julien MOUTTE  <julien@moutte.net>

	* src/backend/bacon-video-widget-gst-0.10.c: (get_list_of_type):
	Fix languages and subtitles listing.

2006-02-17  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (get_media_size),
	(bacon_video_widget_set_aspect_ratio):
	  Fix some compiler warnings (#331517).

2006-02-16  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_try_error):
	Fix compilation with glib < 2.9.1 and > 2.8.0, patch by
	Kazuki Shimura <kazuki@ma.ccnw.ne.jp> (Closes: #331426)

2006-02-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_open_with_subtitle):
	  Prevent warning on open.

2006-02-15  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-message-connection.h: remove dupe declaration
	* src/egg-recent-view-gtk.c: (egg_recent_view_gtk_add_to_menu):
	Fix critical warning when starting up (Closes: #330997)

============ Version 1.3.91

2006-02-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.3.91

2006-02-12  Julien MOUTTE  <julien@moutte.net>

	* src/backend/bacon-video-widget-gst-0.10.c: (get_media_size),
	(bacon_video_widget_set_video_property),
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata_bool),
	(bacon_video_widget_get_metadata): Fix some indentations and
	fix DVB aspect ratio fraction according to the spec 20/9 == 2.22:1

2006-02-12  Julien MOUTTE  <julien@moutte.net>

	* src/backend/bacon-video-widget-gst-0.10.c: (get_media_size),
	(bacon_video_widget_realize), (caps_set),
	(bacon_video_widget_set_aspect_ratio): Refactored aspect ratio
	handling. Indeed _set_aspect_ratio is here to force the movie
	aspect ratio when the encoder/muxer did not set it correctly.
	The display aspect ratio is obtained from the overlay object
	and is then used to calculate how we should scale the video