@@ -1,3 +1,9 @@
+2006-02-19  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (on_got_metadata_event): always update the window title
+	when we get new metadata, fixes a problem with the window title not
+	changing
+
 2006-02-19  Julien MOUTTE  <julien@moutte.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c: (get_list_of_type):
